[package]
name = "filecoin-proofs-api"
version = "8.0.1"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bellperson = { version = "0.14.0", default-features = false }
bincode = "1.1.2"
serde = "1.0.104"
filecoin-proofs-v1 = { package = "filecoin-proofs", version = "~8.0", git = "https://github.com/s1m0n21/petal-fil-proofs", branch = "qiniu-kodo", default-features = false }
filecoin-hashers = { git = "https://github.com/s1m0n21/petal-fil-proofs", branch = "qiniu-kodo", version = "~3.0", default-features = false, features = ["poseidon", "sha256"] }
fr32 = { version = "~1.0", default-features = false, git = "https://github.com/s1m0n21/petal-fil-proofs", branch = "qiniu-kodo" }
storage-proofs-core = { git = "https://github.com/s1m0n21/petal-fil-proofs", branch = "qiniu-kodo", version = "~8.0", default-features = false }
rayon = "1.1.0"
log = "0.4.14"
qiniu = { package = "qiniu-download", version = "1.0.7" }

[features]
default = ["pairing", "gpu"]
pairing = ["filecoin-proofs-v1/pairing", "bellperson/pairing", "storage-proofs-core/pairing", "fr32/pairing"]
blst = ["filecoin-proofs-v1/blst", "bellperson/blst", "storage-proofs-core/blst", "fr32/blst"]
gpu = ["filecoin-proofs-v1/gpu", "filecoin-hashers/gpu", "storage-proofs-core/gpu", "bellperson/gpu", "fr32/gpu"]
